src/main/istio/cloudnativews-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: {name of  your service}
    namespace: default
spec:
    host: {name of service}.{namespace}.svc.cluster.local
    subsets:
    - name: v1 
      labels:
        version: v1
