src/main/istio/cloudnativews-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: {name-of-your-service}
  namespace: default 
spec:
  gateways:
  - {must match the name of your gateway}
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: "/greet"
    route:
    - destination:
        host: {name-of-service}.{namespace}.svc.cluster.local
        subset: v1 
        port:
          number: 8080
